Actualizacion Unico error aveces se congela investigar el porque